--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 
 <body>
     <header>
-        
+        <h1>Índice de prácticas TPED1</h1>
     </header>
+
+
     <section>
-      
+
+        <ul>
+            <a href="Ejercicio7_elpais/index.html"><li>El País</li></a>
+            <a href="#"> <li>Galería</li></a>
+            <a href="#"></a><li>Galería flex</li></a>
+            <a href="#"></a><li>Enlace</li></a>
+            <a href="#"><li>Enlace</li></a>
+
+        </ul>
     </section>
 
 </body>
